@@ -16,25 +16,23 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class ConfiguracaoSeguranca {
 
-    @Value("${cors.allow-requestMatchers-login}")
-    private String requestMatchersLogin;
-    @Value("${cors.allow-requestMatchers-refreshToken}")
-    private String requestMatchersRefreshToken;
+    private final FiltroTokenAcesso filtroTokenAcesso;
 
     @Value("${cors.allow-origins}")
     private String allowedOrigins;
+
     @Value("${cors.allow-methods}")
     private String allowedMethods;
+
     @Value("${cors.allow-headers}")
     private String allowedHeaders;
-
-    private final FiltroTokenAcesso filtroTokenAcesso;
 
     public ConfiguracaoSeguranca(FiltroTokenAcesso filtroTokenAcesso) {
         this.filtroTokenAcesso = filtroTokenAcesso;
@@ -43,33 +41,34 @@ public class ConfiguracaoSeguranca {
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(req -> {
-                    req.requestMatchers(requestMatchersLogin, requestMatchersRefreshToken).permitAll();
+                    req.requestMatchers("/api/auth/**").permitAll();
                     req.anyRequest().authenticated();
                 })
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .addFilterBefore(filtroTokenAcesso, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(allowedOrigins.split(",")));
-        configuration.setAllowedMethods(List.of(allowedMethods.split(",")));
-        configuration.setAllowedHeaders(List.of(allowedHeaders.split(",")));
-        configuration.setAllowCredentials(true);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",\\s*")));
+        config.setAllowedMethods(Arrays.asList(allowedMethods.split(",\\s*")));
+        config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",\\s*")));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
     @Bean
